--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(cpp_coursework)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(cpp_coursework main.cpp Movie.cpp Movie.hpp MovieDatabase.cpp MovieDatabase.hpp Movie.hh MovieDatabase.hh)
+add_executable(cpp_coursework main.cpp Movie.cpp Movie.hpp MovieDatabase.cpp MovieDatabase.hpp MovieDatabase.hh)
